# napari-filaments

./: .gitignore  .pre-commit-config.yaml  42.0.0  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
asdf/: Filament-0.csv  Filament-1.csv  info.json
src/napari_filaments/: __init__.py  _consts.py  _custom_layers.py  _optimizer.py  _spline.py  _subwidgets.py  _table_stack.py  _types.py  _widget.py  core.py  napari.yaml
src/napari_filaments/_tests/: image.tif  test_optimizer.py  test_widget.py
src/napari_filaments/_tests/_roi/: line.roi  path.roi
