[metadata]
name = napari-filaments
version = 0.0.1
description = A napari plugin for filament analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hanjinliu/napari-filaments
author = Hanjin Liu
author_email = liuhanjin-sc@g.ecc.u-tokyo.ac.jp
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/hanjinliu/napari-filaments/issues
    Documentation = https://github.com/hanjinliu/napari-filaments#README.md
    Source Code = https://github.com/hanjinliu/napari-filaments
    User Support = https://github.com/hanjinliu/napari-filaments/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-filaments = napari_filaments:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
